#45 - support of Java 11